unpackaged/main/default/objects/Lead/fields/VAT_Drop_After_28_Nights__c.field-meta.xml
<CustomField>
    <fullName>VAT_Drop_After_28_Nights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAT Drop After 28 Nights</label>
    <type>Checkbox</type>
</CustomField>