unpackaged/main/default/objects/Lead/fields/VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number__c</fullName>
    <inlineHelpText>This is 9 or 12 numbers, sometimes with ‘GB’ at the start, like 123456789 or GB123456789.</inlineHelpText>
    <label>VAT Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>