unpackaged/main/default/objects/Lead/fields/VAT_Registered__c.field-meta.xml
<CustomField>
    <fullName>VAT_Registered__c</fullName>
    <label>VAT Registered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes (International)</fullName>
            </value>
            <value>
                <fullName>Yes (UK)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>