unpackaged/main/default/objects/Lead/fields/What_is_your_cancellation_policy__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_cancellation_policy__c</fullName>
    <label>What is your cancellation policy?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>