unpackaged/main/default/objects/Lead/fields/What_VAT_model_do_you_use__c.field-meta.xml
<CustomField>
    <fullName>What_VAT_model_do_you_use__c</fullName>
    <label>What VAT model do you use?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>