unpackaged/main/default/objects/Lead/fields/Where_Did_You_Hear_About_SITU__c.field-meta.xml
<CustomField>
    <fullName>Where_Did_You_Hear_About_SITU__c</fullName>
    <label>Where Did You Hear About SITU?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>