unpackaged/main/default/objects/Lead/fields/Which_locations_do_you_operate__c.field-meta.xml
<CustomField>
    <fullName>Which_locations_do_you_operate__c</fullName>
    <label>Which locations do you operate?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>