unpackaged/main/default/objects/Lead/fields/Why_not_accepting_key_requirments__c.field-meta.xml
<CustomField>
    <fullName>Why_not_accepting_key_requirments__c</fullName>
    <label>Why not accepting key requirments?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>