unpackaged/main/default/objects/Lead/recordTypes/Partner_Leads.recordType-meta.xml
<RecordType>
    <fullName>Partner_Leads</fullName>
    <active>true</active>
    <businessProcess>Partners Leads</businessProcess>
    <description>For managing new partner acquisition leads</description>
    <label>Partner Leads</label>
</RecordType>