unpackaged/main/default/objects/Lead/recordTypes/Sales_Leads.recordType-meta.xml
<RecordType>
    <fullName>Sales_Leads</fullName>
    <active>true</active>
    <businessProcess>Sales Leads</businessProcess>
    <description>This Lead record type is used by sales</description>
    <label>Sales Leads</label>
</RecordType>