unpackaged/main/default/objects/Lead/recordTypes/Supply_Leads.recordType-meta.xml
<RecordType>
    <fullName>Supply_Leads</fullName>
    <active>true</active>
    <businessProcess>Supplier Leads</businessProcess>
    <description>This record type will be used only by supply chain to process their leads</description>
    <label>Supply Leads</label>
</RecordType>