unpackaged/main/default/objects/Lead/validationRules/Lead_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Status),
TEXT(Status) = &quot;Closed&quot;,
ISBLANK(TEXT(Closed_Lost_Reason__c))
)</errorConditionFormula>
    <errorMessage>Please select closed reason.</errorMessage>
</ValidationRule>