unpackaged/main/default/objects/Lead/listViews/All_Jasmine_Leads.listView-meta.xml
<ListView>
    <fullName>All_Jasmine_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Which_locations_do_you_operate__c</columns>
    <columns>Total_Apartments_Units__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Supplier_Stage__c</columns>
    <columns>Supplier_Sub_Stage__c</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>Current_Notes__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Partner_Leads,Lead.Supply_Leads</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>jtava</value>
    </filters>
    <filters>
        <field>Supplier_Stage__c</field>
        <operation>notEqual</operation>
        <value>No reply,Rejected,Partnered</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed,Closed Partnered,Closed Parked</value>
    </filters>
    <label>All Active Jasmine Leads</label>
</ListView>