unpackaged/main/default/objects/Lead/listViews/All_Leads_BD.listView-meta.xml
<ListView>
    <fullName>All_Leads_BD</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Closed_Lost_Reason__c</columns>
    <columns>Sales_Channel__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>Quick_Notes__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CONVERTED</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New,Working,Nurturing,Converted,Closed,Uncontacted Supplier</value>
    </filters>
    <label>All Leads BD</label>
</ListView>