unpackaged/main/default/objects/Lead/listViews/All_Supply_Leads.listView-meta.xml
<ListView>
    <fullName>All_Supply_Leads</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>Supplier_Stage__c</columns>
    <columns>Total_Apartments_Units__c</columns>
    <columns>Number_of_properties__c</columns>
    <columns>Supplier_Form_Property_Count__c</columns>
    <columns>Location__c</columns>
    <columns>Property_Location__c</columns>
    <columns>Which_locations_do_you_operate__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Supply_Leads</value>
    </filters>
    <label>SCM - Supply Leads - All</label>
</ListView>