unpackaged/main/default/objects/Lead/listViews/All_Supply_Leads_in_Progress.listView-meta.xml
<ListView>
    <fullName>All_Supply_Leads_in_Progress</fullName>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>Date_of_Last_Note__c</columns>
    <columns>Towns_Cities__c</columns>
    <columns>Countries__c</columns>
    <columns>Regions__c</columns>
    <columns>Total_Apartments_Units__c</columns>
    <columns>Property_Management_Systems__c</columns>
    <columns>Channel_Managers__c</columns>
    <columns>Current_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New,Working</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>sdavi</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Partner_Leads</value>
    </filters>
    <label>Sam&#39;s In Progress Leads</label>
</ListView>