unpackaged/main/default/objects/Lead/listViews/Closed_Parked_Supply_Leads.listView-meta.xml
<ListView>
    <fullName>Closed_Parked_Supply_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Becky,Seth</value>
    </filters>
    <filters>
        <field>Supplier_Stage__c</field>
        <operation>equals</operation>
        <value>Closed Parked</value>
    </filters>
    <label>Closed Parked Supply Leads</label>
</ListView>