unpackaged/main/default/objects/Lead/listViews/Construction_Companies.listView-meta.xml
<ListView>
    <fullName>Construction_Companies</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Channel__c</field>
        <operation>equals</operation>
        <value>Travel</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Researched</value>
    </filters>
    <filters>
        <field>Client_type__c</field>
        <operation>equals</operation>
        <value>Construction</value>
    </filters>
    <label>Researched Construction Companies</label>
</ListView>