unpackaged/main/default/objects/Lead/listViews/Copy_of_Ben_Business_Leads.listView-meta.xml
<ListView>
    <fullName>Copy_of_Ben_Business_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Closed_Lost_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>bsear</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Converted,Closed</value>
    </filters>
    <label>Ben Business Leads</label>
</ListView>