unpackaged/main/default/objects/Lead/listViews/Copy_of_Rentivo_Leads.listView-meta.xml
<ListView>
    <fullName>Copy_of_Rentivo_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Trading_Name__c</columns>
    <columns>Lead_Sub__c</columns>
    <columns>Lead_Record_Type__c</columns>
    <columns>Which_locations_do_you_operate__c</columns>
    <columns>Number_of_properties__c</columns>
    <columns>Are_you_connected_to_a_channel_manager__c</columns>
    <columns>Supplier_Stage__c</columns>
    <columns>Supplier_Sub_Stage__c</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>Current_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Record_Type__c</field>
        <operation>equals</operation>
        <value>Stays.co.uk Lead,Vacation Rental</value>
    </filters>
    <filters>
        <field>Supplier_Stage__c</field>
        <operation>equals</operation>
        <value>Prospective Provider,In Progress Supplier,Closed Partnered</value>
    </filters>
    <filters>
        <field>Lead_Sub__c</field>
        <operation>equals</operation>
        <value>Stewart Black</value>
    </filters>
    <label>Stewart&#39;s VR Leads</label>
</ListView>