unpackaged/main/default/objects/Lead/listViews/Councils_Housing_Associations.listView-meta.xml
<ListView>
    <fullName>Councils_Housing_Associations</fullName>
    <columns>FULL_NAME</columns>
    <columns>Job_Title__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.INDUSTRY</field>
        <operation>equals</operation>
        <value>Housing Association,Local Authority</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>2/12/2024 12:00 AM</value>
    </filters>
    <label>Councils/Housing Associations</label>
</ListView>