unpackaged/main/default/objects/Lead/listViews/hannah_business_leads_V2.listView-meta.xml
<ListView>
    <fullName>hannah_business_leads_V2</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Closed_Lost_Reason__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Current_Notes__c</columns>
    <columns>Date_of_Last_Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>htrig</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Converted,Closed</value>
    </filters>
    <label>Hannah Business Leads</label>
</ListView>