unpackaged/main/default/objects/Lead/listViews/Individual_Prospect_Leads.listView-meta.xml
<ListView>
    <fullName>Individual_Prospect_Leads</fullName>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Cost_Centre__c</columns>
    <columns>Sales_Channel__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>Quick_Notes__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Converted,Closed Lost</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>phil,jackie,yolanda,rhiannon,nathan</value>
    </filters>
    <label>Individual Prospect Leads</label>
</ListView>