unpackaged/main/default/objects/Lead/listViews/Jacob_s_Leads.listView-meta.xml
<ListView>
    <fullName>Jacob_s_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Location__c</columns>
    <columns>Booked__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>jberr</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>LEAD.INDUSTRY</field>
        <operation>notEqual</operation>
        <value>Local Authority</value>
    </filters>
    <filters>
        <field>LEAD.INDUSTRY</field>
        <operation>notEqual</operation>
        <value>Housing Association</value>
    </filters>
    <filters>
        <field>Sales_Channel__c</field>
        <operation>notEqual</operation>
        <value>Mobility</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Sales_Leads</value>
    </filters>
    <label>Jacob&#39;s Leads</label>
</ListView>