unpackaged/main/default/objects/Lead/listViews/Jasmine_In_Progress.listView-meta.xml
<ListView>
    <fullName>Jasmine_In_Progress</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Current_Notes__c</columns>
    <columns>Number_of_properties__c</columns>
    <columns>Supplier_Stage__c</columns>
    <columns>Supplier_Sub_Stage__c</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Supply_Leads</value>
    </filters>
    <filters>
        <field>Supplier_Stage__c</field>
        <operation>equals</operation>
        <value>In Progress Partnership</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>jtava</value>
    </filters>
    <label>Jasmine In Progress</label>
</ListView>